--- a/6HandsSwift/Base.lproj/Main.storyboard
+++ b/6HandsSwift/Base.lproj/Main.storyboard
@@ -373,11 +373,11 @@
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="z3p-71-60f" customClass="SimpleTableViewCell" customModule="_HandsSwift" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="z3p-71-60f" customClass="SimpleTableViewCell" customModule="_HandsSwift" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="z3p-71-60f" id="5HP-Iw-mpm">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <animations/>
                                 </tableViewCellContentView>
@@ -391,10 +391,13 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="xZP-Dp-EhX"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <segue destination="MCg-8f-nBE" kind="push" identifier="toRoomPage" id="QwZ-Nk-eHY"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="69w-8l-BAw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2897" y="1192"/>
+            <point key="canvasLocation" x="2422" y="1062"/>
         </scene>
         <!--Table With New View Controller-->
         <scene sceneID="D86-Bc-akF">
@@ -1291,25 +1294,6 @@
             <point key="canvasLocation" x="3559" y="-1131"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="W1C-i4-55v">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Opc-I5-3J8" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="K7l-iv-rMc">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="C9k-I3-eX7" kind="relationship" relationship="rootViewController" id="P5B-Kj-8CP"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="WnO-qh-so8" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2442" y="1192"/>
-        </scene>
-        <!--Navigation Controller-->
         <scene sceneID="qI9-vN-EuR">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="BP6-6K-Xag" sceneMemberID="viewController">
@@ -1350,5 +1334,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Uam-Mp-znH"/>
+        <segue reference="ssh-1G-fjA"/>
     </inferredMetricsTieBreakers>
 </document>
