--- a/6HandsSwift/Base.lproj/Main.storyboard
+++ b/6HandsSwift/Base.lproj/Main.storyboard
@@ -355,13 +355,45 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <connections>
-                        <segue destination="MCg-8f-nBE" kind="push" identifier="toRoomPage" id="ssh-1G-fjA"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yx7-65-JfD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2422" y="395"/>
+        </scene>
+        <!--New2 Table View Controller-->
+        <scene sceneID="psL-s5-ew7">
+            <objects>
+                <tableViewController storyboardIdentifier="VC with New" id="oAw-ge-sWE" customClass="New2TableViewController" customModule="_HandsSwift" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="VaT-aZ-6v9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="G6S-Zc-ide" customClass="SimpleTableViewCell" customModule="_HandsSwift" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="G6S-Zc-ide" id="7R5-d6-JcR">
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <animations/>
+                                </tableViewCellContentView>
+                                <animations/>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="oAw-ge-sWE" id="YVr-OT-4f3"/>
+                            <outlet property="delegate" destination="oAw-ge-sWE" id="W6p-tk-bqR"/>
+                        </connections>
+                    </tableView>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <segue destination="MCg-8f-nBE" kind="push" identifier="toRoomPage" id="xlx-2x-qHq"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pze-gL-0dZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1970" y="1062"/>
         </scene>
         <!--Pop Table View Controller-->
         <scene sceneID="lqC-Ks-71d">
@@ -392,57 +424,12 @@
                     <navigationItem key="navigationItem" id="xZP-Dp-EhX"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
-                        <segue destination="MCg-8f-nBE" kind="push" identifier="toRoomPage" id="QwZ-Nk-eHY"/>
+                        <segue destination="MCg-8f-nBE" kind="push" identifier="toRoomPage" id="gAE-c1-hYe"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="69w-8l-BAw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2422" y="1062"/>
-        </scene>
-        <!--Table With New View Controller-->
-        <scene sceneID="D86-Bc-akF">
-            <objects>
-                <viewController storyboardIdentifier="VC with New" id="Km5-YE-6hZ" customClass="TableWithNewViewController" customModule="_HandsSwift" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="XcT-kL-QKf"/>
-                        <viewControllerLayoutGuide type="bottom" id="2xh-ev-952"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="CWD-4z-BQ1">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="K3u-G0-N18">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <animations/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="gQG-i2-LLZ">
-                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gQG-i2-LLZ" id="D7y-6t-pFv">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <animations/>
-                                        </tableViewCellContentView>
-                                        <animations/>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="Km5-YE-6hZ" id="RSe-Nb-481"/>
-                                    <outlet property="delegate" destination="Km5-YE-6hZ" id="MJq-wv-XMQ"/>
-                                </connections>
-                            </tableView>
-                        </subviews>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <connections>
-                        <outlet property="table" destination="K3u-G0-N18" id="U96-1t-8Bs"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="k4R-Jq-tQs" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1978" y="1192"/>
         </scene>
         <!--MainProperties-->
         <scene sceneID="JB7-kR-h58">
@@ -765,7 +752,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImagesCell" rowHeight="130" id="AK4-Ky-HQ9" customClass="ImageScrollTableViewCell" customModule="_HandsSwift" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="86" width="320" height="130"/>
+                                        <rect key="frame" x="0.0" y="22" width="320" height="130"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="AK4-Ky-HQ9" id="FlG-9h-2kL">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="129"/>
@@ -818,7 +805,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="InfoCell" rowHeight="40" id="IL0-6D-X7A" customClass="InfoTableViewCell" customModule="_HandsSwift" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="216" width="320" height="40"/>
+                                        <rect key="frame" x="0.0" y="152" width="320" height="40"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IL0-6D-X7A" id="yX1-lO-L9b">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="39"/>
@@ -848,7 +835,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DescriptionCell" rowHeight="41" id="POq-v7-ba7">
-                                        <rect key="frame" x="0.0" y="256" width="320" height="41"/>
+                                        <rect key="frame" x="0.0" y="192" width="320" height="41"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="POq-v7-ba7" id="AC4-g0-GvH">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
@@ -858,7 +845,7 @@
                                         <animations/>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MapCell" rowHeight="10" id="RbH-lS-Kow" customClass="MapTableViewCell" customModule="_HandsSwift" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="297" width="320" height="10"/>
+                                        <rect key="frame" x="0.0" y="233" width="320" height="10"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RbH-lS-Kow" id="FH4-SE-WMG">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="9"/>
@@ -881,7 +868,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SellerCell" rowHeight="70" id="3Em-Qa-tLc" customClass="SellerProfileTableViewCell" customModule="_HandsSwift" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="307" width="320" height="70"/>
+                                        <rect key="frame" x="0.0" y="243" width="320" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3Em-Qa-tLc" id="bft-ja-GDK">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="69"/>
@@ -938,7 +925,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableCell" rowHeight="60" id="MHe-tZ-KuT">
-                                        <rect key="frame" x="0.0" y="377" width="320" height="60"/>
+                                        <rect key="frame" x="0.0" y="313" width="320" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MHe-tZ-KuT" id="3SE-1S-o6m">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
@@ -948,7 +935,7 @@
                                         <animations/>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="emptyCell" rowHeight="41" id="vD8-vV-WHz">
-                                        <rect key="frame" x="0.0" y="437" width="320" height="41"/>
+                                        <rect key="frame" x="0.0" y="373" width="320" height="41"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vD8-vV-WHz" id="K0h-Bi-G3N">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
@@ -1334,6 +1321,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Uam-Mp-znH"/>
-        <segue reference="ssh-1G-fjA"/>
+        <segue reference="gAE-c1-hYe"/>
     </inferredMetricsTieBreakers>
 </document>
